TagsInput: fix ip-switch jumping on focus

--- a/src/assets/less/components/tags-input.less
+++ b/src/assets/less/components/tags-input.less
@@ -248,8 +248,8 @@
 			border: 1.5px solid #e7e7ee;
 			border-radius: 8px;
 			outline: none;
-			width: calc(100% - 2px);
-			margin: 3px 0 -1px -.5px;
+			width: 100%;
+			margin: 3px 0 -1px -1px;
 
 			@media (min-width: @screen-sm-min) {
 				margin: 0 0 0 3px;
